# scepter-system-rs

./: Cargo.toml  README.md
src/: app.rs  colors.rs  main.rs
src/app/: font.rs  llama_wrapper.rs  navigation_controller.rs  ollama_wrapper.rs  page.rs
src/app/llama_wrapper/: params.rs
src/app/page/: home.rs  mind.rs
src/app/page/mind/: node.rs  snarl_viewer.rs
